cambios en contactos y tambien en estilos

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <!-- Responsive Meta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <title>|Ginelaser</title>
+    <title>Contacto |Ginelaser</title>
     <!-- Fav Icons -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
@@ -110,14 +110,10 @@
         <section class="banner-section">
             <div class="container">
                 <div class="banner-inner">
-                    <div class="banner-content">
-                        <h2 class="page-title">Contact Us.</h2>
-                        <p>Saunas are used all over the world to improve health to enjoy <br>and relax electronic typesetting.</p>
-                    </div>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Pages</li>
+                            <li class="breadcrumb-item"><a href="index.html">GINELASER</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Contacto</li>
                         </ol>
                     </nav>
                 </div>
@@ -134,7 +130,7 @@
         <!--==================================================================== 
            Start Contact Info Section
        =====================================================================-->
-        <div class="contact-info mt-150 rmt-125">
+        <!--<div class="contact-info mt-150 rmt-125">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-4 col-lg-6">
@@ -172,7 +168,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!--==================================================================== 
            End Contact Info Section
        =====================================================================-->
@@ -186,38 +182,38 @@
             <div class="container">
                <div class="contact-form-inner">
                    <div class="section-title text-center mb-95">
-                        <h2>Get In Touch</h2>
-                        <p>It has different attractions tropical rain fog dew wall jets and it is <br> combined with sound, caribbian storm.</p>
+                        <h2>Ven a conocernos</h2>
+                        <p>Estamos ubicados en <strong>La fontana, Residencial los Almendros #15, San Miguel, El Salvador</strong> Nuestras instalaciones son nuevas y cuentan con la <strong> mejor aparatología en estética avanzada.</strong> </p>
                     </div>
                     <form action="POST">
                         <div class="row clearfix">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" name="first_name" id="first_name" class="form-control" value="" required="" placeholder="Name Here">
+                                    <input type="text" name="first_name" id="first_name" class="form-control" value="" required="" placeholder="Nombre">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="email" name="email" id="email" class="form-control" value="" required="" placeholder="Email Here">
+                                    <input type="email" name="email" id="email" class="form-control" value="" required="" placeholder="Email">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="tel" name="phone-no" id="phone-no" class="form-control" value="" required="" placeholder="Phone No.">
+                                    <input type="tel" name="phone-no" id="phone-no" class="form-control" value="" required="" placeholder="Número de teléfono.">
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" name="subject" id="subject" class="form-control" value="" required="" placeholder="Subject">
+                                    <input type="text" name="subject" id="subject" class="form-control" value="" required="" placeholder="Asunto">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group mb-60">
-                                    <textarea name="message" id="message" class="form-control" rows="7" required="" placeholder="Message"></textarea>
+                                    <textarea name="message" id="message" class="form-control" rows="7" required="" placeholder="Mensaje"></textarea>
                                 </div>
                             </div>
                             <div class="col-md-12 text-center">
-                                <button type="submit" class="theme-btn style-two">Send Now</button>
+                                <button type="submit" class="theme-btn style-two">Enviar ahora</button>
                             </div>
                         </div>
                     </form>
@@ -234,6 +230,8 @@
            Start Contact Map Section
        =====================================================================-->
         <div class="contact-map" id="map"></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3880.0014497230836!2d-88.18691403104893!3d13.474008096412582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7b2beac65ce0e1%3A0xc3296f8a39efbe6e!2sGINELASER!5e0!3m2!1sen!2ssv!4v1697142055294!5m2!1sen!2ssv" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         <!--==================================================================== 
            End Contact Map Section
        =====================================================================-->
