--- a/about.html
+++ b/about.html
@@ -111,14 +111,10 @@
         <section class="banner-section">
             <div class="container">
                 <div class="banner-inner">
-                    <div class="banner-content">
-                        <h2 class="page-title">About Us.</h2>
-                        <p>Saunas are used all over the world to improve <br> health, to enjoy and relax.</p>
-                    </div>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">About Us</li>
+                            <li class="breadcrumb-item"><a href="index.html">GINESALER</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Acerca de</li>
                         </ol>
                     </nav>
                 </div>
