agregando imagenes, y tambien realizando cambios

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_10.png" alt="images">
                             <div class="text-content">
                                 <h4>DEPILACIÓN LASER</h4>
                             </div>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_9.png" alt="images">
                             <div class="text-content">
                                 <h4>LASER PARA ESTRÍAS Y CICATRIZ</h4>
                             </div>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_8.png" alt="images">
                             <div class="text-content">
                                 <h4>MANCHAS E HIPERPIGMENTACIÓN</h4>
                             </div>
@@ -214,7 +214,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_7.png" alt="images">
                             <div class="text-content">
                                 <h4>TRATAMIENTOS REDUCTIVOS</h4>
                             </div>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_6.png" alt="images">
                             <div class="text-content">
                                 <h4>VERRUGAS</h4>
                             </div>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_5.png" alt="images">
                             <div class="text-content">
                                 <h4>MÉTODOS DE PLANIFICACIÓN</h4>
                             </div>
@@ -245,7 +245,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_4.png" alt="images">
                             <div class="text-content">
                                 <h4>ACIDO HIALURONICO</h4>
                             </div>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_3.png" alt="images">
                             <div class="text-content">
                                 <h4>USO DE LASER EN TRACTO GENITAL</h4>
                             </div>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_2.png" alt="images">
                             <div class="text-content">
                                 <h4>TRATAMIENTOS GINECOLÓGICO ESTÉTICOS</h4>
                             </div>
@@ -276,7 +276,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="images">
+                            <img src="assets/images/services_ginesv/foto_1.png" alt="images">
                             <div class="text-content">
                                 <h4>GINECOLOGICOS ESTETICOS QUIRURGICOS</h4>
                             </div>
