cambios en el acerca de y quitando algunos modulos

--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
                             </div>
                             <h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
-                            <div class="vision-mision">
+                           <!-- <div class="vision-mision">
                                 <div class="vm-image">
                                     <img src="assets/images/about/icon.png" alt="Icon">
                                 </div>
@@ -156,8 +156,8 @@
                                     <h4>Our Mission & Vission</h4>
                                     <p>The pleasant temperature, similar to body temperature, extending beneath client’s body, frees the body negative tension caused by everyday stress.</p>
                                 </div>
-                            </div>
-                            <a href="#" class="theme-btn style-two">Expert Team</a>
+                            </div>-->
+                            <a href="contact.html" class="theme-btn style-two">Contactanos</a>
                         </div>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                             <h3>Mision.</h3>
                             <h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
-                            <a href="services.html" class="theme-btn style-two mt-15">Our Services</a>
+                            <!--<a href="services.html" class="theme-btn style-two mt-15">Our Services</a>-->
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -188,7 +188,7 @@
                             <h3>Vision.</h3>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
                             <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
-                            <a href="team.html" class="theme-btn style-four mt-15">Our Experts</a>
+                            <!--<a href="team.html" class="theme-btn style-four mt-15">Our Experts</a>-->
                         </div>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
         <section class="team-section bg-two pt-145 pb-150 rpt-95 rpb-70">
             <div class="container">
                 <div class="section-title mb-90">
-                    <h2>Our Expert And <br>Dedicated Team.</h2>
+                    <h2>Nuestros Servicios</h2>
                 </div>
                 
                 <div class="team-carousel owl-carousel style-two">
@@ -263,7 +263,7 @@
         <!--==================================================================== 
            Start Testimonials Section
        =====================================================================-->
-        <section class="testimonial-section bg-three py-135 rpy-100 mb-150 rmb-100">
+        <!--<section class="testimonial-section bg-three py-135 rpy-100 mb-150 rmb-100">
             <div class="container">
                 <div class="testimonial-wrap owl-carousel">
                     <div class="testimonial-item">
@@ -329,7 +329,7 @@
             <div class="testimonial-quote">
                 <img src="assets/images/testimonials/quote.png" alt="angle">
             </div>
-        </section>
+        </section>-->
         <!--==================================================================== 
            End Testimonials Section
        =====================================================================-->
@@ -339,7 +339,7 @@
         <!--==================================================================== 
            Start Client Section
         =====================================================================-->
-        <div class="client-section mb-100 rmb-50">
+       <!-- <div class="client-section mb-100 rmb-50">
             <div class="container">
                 <div class="client-wrap">
                     <div class="client-item">
@@ -371,7 +371,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <!--==================================================================== 
            End Client Section
        =====================================================================-->
