CAMBIO DE IMAGEN

--- a/index.html
+++ b/index.html
@@ -593,12 +593,12 @@
                         <div class="row align-items-center">
                             <div class="col-lg-5">
                                 <div class="testimonial-image">
-                                    <img src="assets/images/testimonials/testimonial1.png" alt="Testimonial">
+                                    <img src="assets/images/services_ginesv/docotor_oficial.png" alt="Testimonial">
                                 </div>
                             </div>
                             <div class="col-lg-7">
                                 <div class="testimonial-content">
-                                    <h3>Para mi es importante brindarles este preciso mensaje.</h3>
+                                    <h3>PARA MI ES IMPORTANTE TU SALUD Y CUIDAR DE TI</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae porro saepe provident et? Repudiandae dolores neque sequi, minima tempore dolor eveniet non eos tempora, earum nulla, minus eius deserunt laudantium!</p>
                                     <h4>Dr.Nelson Lopez</h4>
                                     <span>Especialista en Ginecología y Cuidados esteticos</span>
