cambios en el footer general

--- a/ginecologicosesteticosquirurgicos.html
+++ b/ginecologicosesteticosquirurgicos.html
@@ -189,13 +189,16 @@
                                 <div class="widget services-widget">
                                     <h4 class="footer-title">Nuestros Servicios.</h4>
                                     <ul class="list-style-one">
-                                        <li><a href="#">Tensado Vaginal</a></li>
-                                        <li><a href="#">Blanquamiento</a></li>
-                                        <li><a href="#">Mejoria de cicatriz y estrias</a></li>
-                                        <li><a href="#">Relleno de punto G</a></li>
-                                        <li><a href="#">Depilación Axilas</a></li>
-                                        <li><a href="#">Depilación Barba</a></li>
-                                        <li><a href="#">Depilación Piernas</a></li>
+                                        <li><a href="depilacionlaser.html">Depilación Laser</a></li>
+                                                <li><a href="laserestriascicatriz.html">Laser para estrías y cicatriz</a></li>
+                                                <li><a href="manchasehiperpigmentacion.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="verrugas.html">Verrugas</a></li>
+                                                <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
+                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
+                                                <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
+                                                <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                     </ul>
                                 </div>
                             </div>
