--- a/verrugas.html
+++ b/verrugas.html
@@ -161,7 +161,7 @@
                                 <div class="widget about-widget mr-30 rmr-0">
                                     <h4 class="footer-title">Sobre Nosotros.</h4>
                                     <div class="about-widget-content">
-                                        <p>Lorem ipsum dolasor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
                                         <div class="about-widget-contact mt-25">
                                             <p>La fontana, Residencial los Almendros, #15 <br> San Miguel, El Salvador</p>
                                             <h4><a href="callto:+00568468349">+503 7199 3626</a></h4>
@@ -173,13 +173,16 @@
                                 <div class="widget services-widget">
                                     <h4 class="footer-title">Nuestros Servicios.</h4>
                                     <ul class="list-style-one">
-                                        <li><a href="#">Tensado Vaginal</a></li>
-                                        <li><a href="#">Blanquamiento</a></li>
-                                        <li><a href="#">Mejoria de cicatriz y estrias</a></li>
-                                        <li><a href="#">Relleno de punto G</a></li>
-                                        <li><a href="#">Depilación Axilas</a></li>
-                                        <li><a href="#">Depilación Barba</a></li>
-                                        <li><a href="#">Depilación Piernas</a></li>
+                                        <li><a href="depilacionlaser.html">Depilación Laser</a></li>
+                                                <li><a href="laserestriascicatriz.html">Laser para estrías y cicatriz</a></li>
+                                                <li><a href="manchasehiperpigmentacion.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="verrugas.html">Verrugas</a></li>
+                                                <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
+                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
+                                                <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
+                                                <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                     </ul>
                                 </div>
                             </div>
