--- a/contact.html
+++ b/contact.html
@@ -229,8 +229,11 @@
         <!--==================================================================== 
            Start Contact Map Section
        =====================================================================-->
-        <div class="contact-map" id="map"></div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3880.0014497230836!2d-88.18691403104893!3d13.474008096412582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7b2beac65ce0e1%3A0xc3296f8a39efbe6e!2sGINELASER!5e0!3m2!1sen!2ssv!4v1697142055294!5m2!1sen!2ssv" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="contact-map" id="map">
+            
+
+        </div>
+        
         </div>
         <!--==================================================================== 
            End Contact Map Section
