--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 
 <body>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="float" target="_blank">
-<i class="fa fa-whatsapp my-float"></i>
-</a>
+<i class="fa fa-whatsapp my-float"></i></a>
 
     <div class="page-wrapper">
 
