--- a/manchasehiperpigmentacion.html
+++ b/manchasehiperpigmentacion.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="assets/css/style_whatsapp.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -27,6 +28,9 @@
 </head>
 
 <body>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i></a>
     <div class="page-wrapper">
 
         <!-- Preloader -->
