--- a/index.html
+++ b/index.html
@@ -141,11 +141,10 @@
                     <div class="col-lg-5">
                         <div class="about-content">
                             <div class="section-title">
-                                <h2>Tenemos más de 10+ años de experiencia.</h2>
+                                <!--<h3>GINELASER</h3>-->
                             </div>
-                            <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum dolore dolorum nihil quibusdam animi! Qui, harum. Aspernatur nisi tempore officia laborum sequi similique sint quis maiores quod, repudiandae libero illo.</h6>
-                            <!--<h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>-->
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique autem soluta nobis itaque exercitationem culpa hic tempora velit quo aspernatur, adipisci ipsum nam consectetur eveniet ratione officiis laboriosam quos nesciunt.</p>
+                            <p>Bienvenida a nuestra página web de tratamientos ginecológicos, donde nos preocupamos profundamente por tu salud y bienestar como mujer. Te ofrecemos una guía completa sobre los tratamientos ginecológicos disponibles y cómo pueden beneficiarse. La salud ginecológica es esencial para tu calidad de vida, y estamos aquí para proporcionarte información valiosa y soluciones efectivas.</p>
+                            <p>Creemos en la importancia de la atención médica preventiva y en brindar soluciones efectivas para las necesidades de salud de las mujeres. Si deseas obtener más información o programar una consulta, no dudes en contactarnos. Tu salud y bienestar son nuestra principal preocupación. ¡Estamos aquí para cuidarte!.</p>
                             <!--<p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>-->
                             <!--<div class="vision-mision">
                                <div class="vm-image">
