--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="col-lg-5">
                         <div class="about-content">
                             <div class="section-title">
-                                <!--<h3>GINELASER</h3>-->
+                                <h2>GINELASER</h2>
                             </div>
                             <p>Bienvenida a nuestra página web de tratamientos ginecológicos, donde nos preocupamos profundamente por tu salud y bienestar como mujer. Te ofrecemos una guía completa sobre los tratamientos ginecológicos disponibles y cómo pueden beneficiarse. La salud ginecológica es esencial para tu calidad de vida, y estamos aquí para proporcionarte información valiosa y soluciones efectivas.</p>
                             <p>Creemos en la importancia de la atención médica preventiva y en brindar soluciones efectivas para las necesidades de salud de las mujeres. Si deseas obtener más información o programar una consulta, no dudes en contactarnos. Tu salud y bienestar son nuestra principal preocupación. ¡Estamos aquí para cuidarte!.</p>
