--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                     <li>Axila + Bigote</li>
                                     <li>Bikini + Pierna</li>
                                 </ul>
-                                <a href="#" class="theme-btn">Agenda tu cita!</a>
+                                <a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="theme-btn">Agenda tu cita!</a>
                           </div>                       
                         </div>
                     </div>
@@ -358,7 +358,7 @@
                                     <li>Bigote</li>
                                    
                                 </ul>
-                                <a href="#" class="theme-btn">Agenda tu cita!</a>
+                                <a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="theme-btn">Agenda tu cita!</a>
                           </div>
                         </div>
                     </div>
@@ -376,7 +376,7 @@
                                     <li>Axilas</li>
                                     <li>Bikini</li>
                                 </ul>
-                                <a href="#" class="theme-btn">Agenda tu cita!</a>
+                                <a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="theme-btn">Agenda tu cita!</a>
                           </div>
                         </div>
                     </div>
