--- a/index.html
+++ b/index.html
@@ -599,9 +599,10 @@
                             <div class="col-lg-7">
                                 <div class="testimonial-content">
                                     <h3>PARA MI ES IMPORTANTE TU SALUD Y CUIDAR DE TI</h3>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae porro saepe provident et? Repudiandae dolores neque sequi, minima tempore dolor eveniet non eos tempora, earum nulla, minus eius deserunt laudantium!</p>
+                                    <p>Es un honor darles la bienvenida a nuestra pagina ginecológica. En nuestra clínica ginecológica, entendemos que la salud de la mujer es un asunto de gran importancia. Cada etapa de la vida de una mujer viene acompañada de desafíos y necesidades únicas, y estamos aquí para brindar el apoyo y la atención especializada que usted merece. </p>
+                                    <p>gradecemos la confianza que ha depositado en nosotros y esperamos ser su recurso de confianza en temas de salud ginecológica. Juntas, podemos cuidar de su salud y bienestar</p>
                                     <h4>Dr.Nelson Lopez</h4>
-                                    <span>Especialista en Ginecología y Cuidados esteticos</span>
+                                    <span>Especialista en Ginecología y Cuidados Ginecoesteticos</span>
                                 </div>
                             </div>
                         </div>
