--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                                 <div class="testimonial-content">
                                     <h3>PARA MI ES IMPORTANTE TU SALUD Y CUIDAR DE TI</h3>
                                     <p>Es un honor darles la bienvenida a nuestra pagina ginecológica. En nuestra clínica ginecológica, entendemos que la salud de la mujer es un asunto de gran importancia. Cada etapa de la vida de una mujer viene acompañada de desafíos y necesidades únicas, y estamos aquí para brindar el apoyo y la atención especializada que usted merece. </p>
-                                    <p>gradecemos la confianza que ha depositado en nosotros y esperamos ser su recurso de confianza en temas de salud ginecológica. Juntas, podemos cuidar de su salud y bienestar</p>
+                                    <p>Agradecemos la confianza que ha depositado en nosotros y esperamos ser su recurso de confianza en temas de salud ginecológica.</p>
                                     <h4>Dr.Nelson Lopez</h4>
                                     <span>Especialista en Ginecología y Cuidados Ginecoesteticos</span>
                                 </div>
