--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_9.png" alt="images">
+                            <img src="assets/images/services_ginesv/estrias.png" alt="images">
                             <div class="text-content">
                                 <a href="laserestriascicatriz.html"><h4>LASER PARA ESTRÍAS Y CICATRIZ</h4></a>
                             </div>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_8.png" alt="images">
+                            <img src="assets/images/services_ginesv/axila.png" alt="images">
                             <div class="text-content">
                                 <a href="manchasehiperpigmentacion.html"><h4>MANCHAS E HIPERPIGMENTACIÓN</h4></a>
                             </div>
@@ -212,7 +212,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_7.png" alt="images">
+                            <img src="assets/images/services_ginesv/foto_6.png" alt="images">
                             <div class="text-content">
                                 <a href="tratamientosreductivos.html"><h4>TRATAMIENTOS REDUCTIVOS</h4></a>
                             </div>
@@ -220,7 +220,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_6.png" alt="images">
+                            <img src="assets/images/services_ginesv/verrugas.png" alt="images">
                             <div class="text-content">
                                 <a href="verrugas.html"><h4>VERRUGAS</h4></a>
                             </div>
@@ -228,7 +228,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_5.png" alt="images">
+                            <img src="assets/images/services_ginesv/planificacion.png" alt="images">
                             <div class="text-content">
                                 <a href="metodosdeplanificacion.html"><h4>MÉTODOS DE PLANIFICACIÓN</h4></a>
                             </div>
@@ -243,7 +243,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_4.png" alt="images">
+                            <img src="assets/images/services_ginesv/foto_2.png" alt="images">
                             <div class="text-content">
                                 <a href="acidohialuronico.html"><h4>ACIDO HIALURONICO</h4></a>
                             </div>
@@ -251,7 +251,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_3.png" alt="images">
+                            <img src="assets/images/services_ginesv/uso laser genital.png" alt="images">
                             <div class="text-content">
                                 <a href="lasertractogenital.html"><h4>USO DE LASER EN TRACTO GENITAL</h4></a>
                             </div>
@@ -259,7 +259,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_2.png" alt="images">
+                            <img src="assets/images/services_ginesv/laser vaginal.png" alt="images">
                             <div class="text-content">
                                 <a href="tratamientosginecologicoesteticos.html"><h4>TRATAMIENTOS GINECOLÓGICO ESTÉTICOS</h4></a>
                             </div>
@@ -274,7 +274,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="single-content">
-                            <img src="assets/images/services_ginesv/foto_1.png" alt="images">
+                            <img src="assets/images/services_ginesv/labiplastia.png" alt="images">
                             <div class="text-content">
                                 <a href="ginecologicosesteticosquirurgicos.html"><h4>GINECOLOGICOS ESTETICOS QUIRURGICOS</h4></a>
                             </div>
@@ -601,7 +601,7 @@
                                     <h3>PARA MI ES IMPORTANTE TU SALUD Y CUIDAR DE TI</h3>
                                     <p>Es un honor darles la bienvenida a nuestra pagina ginecológica. En nuestra clínica ginecológica, entendemos que la salud de la mujer es un asunto de gran importancia. Cada etapa de la vida de una mujer viene acompañada de desafíos y necesidades únicas, y estamos aquí para brindar el apoyo y la atención especializada que usted merece. </p>
                                     <p>Agradecemos la confianza que ha depositado en nosotros y esperamos ser su recurso de confianza en temas de salud ginecológica.</p>
-                                    <h4>Dr.Nelson Lopez</h4>
+                                    <h4>Dr. Nelson López</h4>
                                     <span>Especialista en Ginecología y Cuidados Ginecoesteticos</span>
                                 </div>
                             </div>
