--- a/about.html
+++ b/about.html
@@ -144,10 +144,12 @@
                     <div class="col-lg-5">
                         <div class="about-content">
                             <div class="section-title">
-                                <h2>We Have 25+ Years Experience.</h2>
+                                <h2>GINELASER</h2>
                             </div>
-                            <h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>
-                            <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
+                            <h6>Creemos en la importancia de la atención médica preventiva y en brindar soluciones efectivas para las necesidades de salud de las mujeres. Si deseas obtener más información o programar una consulta, no dudes en contactarnos. Tu salud y bienestar son nuestra principal preocupación. ¡Estamos aquí para cuidarte!.</h6>
+                            <p>Está buscando atención ginecológica o simplemente información y orientación sobre cuestiones de salud femenina, no dude en ponerse en contacto con nosotros. Estamos aquí para responder a sus preguntas, programar consultas y brindarle el apoyo que necesita en su viaje hacia una vida más saludable.
+
+                            </p>
                            <!-- <div class="vision-mision">
                                 <div class="vm-image">
                                     <img src="assets/images/about/icon.png" alt="Icon">
@@ -157,7 +159,7 @@
                                     <p>The pleasant temperature, similar to body temperature, extending beneath client’s body, frees the body negative tension caused by everyday stress.</p>
                                 </div>
                             </div>-->
-                            <a href="contact.html" class="theme-btn style-two">Contactanos</a>
+                            <a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="theme-btn style-two">Contactanos</a>
                         </div>
                     </div>
                 </div>
